[tool.poetry]
name = "stereo-cv"
version = "0.1.0"
description = ""
authors = ["Jiahang Wu <jiahang.wu@iit.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.9.1"
h5py = "^3.11.0"
pyyaml = "^5.4.1"
tqdm = "^4.66.4"
bimvee = "^1.0.23"
opencv-python = "^4.10.0.84"
open3d = "^0.18.0"
numpy = "^1.26.4"
scikit-learn = "^1.5.1"
addict = "^2.4.0"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
